--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/fontello-embedded.css">
   <link rel="stylesheet" href="css/fontello-codes.css">
   <link rel="stylesheet" href="css/fontello-ie7.css">
+  <link rel="stylesheet" href="css/framework.css">
   <link rel="stylesheet" href="css/fontello.css">
   <link rel="stylesheet" href="css/animation.css">
   <link rel="stylesheet" href="css/style.css">
@@ -38,6 +39,18 @@
       </div>
     </div>
   </header>
+  
+  <div class="content" id="c__slider">
+    <div id="slider">
+      <section><img src="img/slider/paisajes1.jpg" alt="" class="slider__img"></section>
+      <section><img src="img/slider/paisajes2.jpg" alt="" class="slider__img"></section>
+      <section><img src="img/slider/paisajes3.jpg" alt="" class="slider__img"></section>
+      <section><img src="img/slider/paisajes4.jpg" alt="" class="slider__img"></section>
+      <section><img src="img/slider/paisajes6.jpg" alt="" class="slider__img"></section>
+    </div>
+    <div class="slider__btn slider__btn__left" id="btn__left">&#10094;</div>
+    <div class="slider__btn slider__btn__right" id="btn__right">&#10095;</div>
+  </div>
   
   <div class="content__modal">
     <div class="modal" id="modal">
